fixed the bug where the text becomes unreadable if the screen width less than 667 pixels

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -198,7 +198,7 @@ header {
 		}
 
 		& ul li {
-			font-size: 15px;
+			font-size: 1.1rem;
 		}
 	}
 
